# rsfts

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: api.rs  document.rs  engine.rs  index.rs  lib.rs  main.rs  ranking.rs  storage.rs  tokenizer.rs
